--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,3 +91,56 @@ nav > ul > li > a:hover {
 #reviews {
     background-color: #EADDCD;
 }
+
+/* Booking Calendar */
+header .icons span {
+    cursor: pointer;
+    height: 38px;
+    width: 38px;
+    line-height: 38px;
+    text-align: center;
+}
+
+header .icons span:hover {
+    background-color: #f2f2f2;
+}
+
+.calendar ul li {
+    position: relative;
+    width: calc(100% / 7);
+}
+
+.calendar .days li{
+    z-index: 1;
+    cursor: pointer;
+    position: relative;
+    margin-top: 20px;
+  }
+
+.calendar .days li::before {
+    position: absolute;
+    content: "";
+    height: 40px;
+    width: 40px;
+    top: 50%;
+    left: 50%;
+    z-index: -1;
+    border-radius: 25%;
+    transform: translate(-50%, -50%);
+}
+
+.days li:hover::before {
+    background-color: #A08986;
+}
+
+.days li.inactive::before {
+    color: #aaa;
+}
+
+.days li.active::before {
+    background-color: #4A2632;
+}
+
+.days li.active {
+    color: #fff;
+}
